--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,15 @@ z-index: 2;
   z-index: 2;
   cursor:pointer;
  }
+  #chimpanze{
+  position: absolute;
+  left: 458px;
+  top: 270px;
+  width: 30px;
+  height: 30px;
+  z-index: 2;
+  cursor:pointer;
+ }
  #tigres{
   position: absolute;
 left: 461px;
@@ -194,6 +203,15 @@ cursor: pointer;
   z-index: 2;
   cursor: pointer;
  }
+  #tucano{
+  position: absolute;
+  left: 200px;
+  top: 550px;
+  width: 30px;
+  height: 30px;
+  z-index: 2;
+  cursor: pointer;
+ }
   #mutuns{
   position: absolute;
   left: 230px;
@@ -205,8 +223,17 @@ cursor: pointer;
  }
 #jacare{
   position: absolute;
-  left: 195px;
-  top: 895px;
+  left: 190px;
+  top: 887px;
+  width: 30px;
+  height: 30px;
+  z-index: 2;
+  cursor: pointer;
+ }
+ #avestruz{
+  position: absolute;
+  left: 190px;
+  top: 919px;
   width: 30px;
   height: 30px;
   z-index: 2;
