--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,27 @@ body{
 
   background-image: url(../images/pw_maze_white.png);
 }
+/*load--------------------*/
+#load{
+  background-color: #E2E2E2;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  left: 0px;
+  top: 0px;
+}
+#carregando{
+  position: absolute;
+  width: 31px;
+  height: 31px;
+  margin-left: -15px;
+  margin-top: -15px;
+  left: 50%;
+  top: 50%;
+  z-index: 4;
 
+}
 
 /*dialogs--------------------*/
 #dialog{display: none;
